[package]
name = "saito-core"
version = "0.2.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = [
    "sync",
    "tokio-macros",
    "test-util",
    "macros",
    "tracing",
] }
secp256k1 = { version = "0.30.0", features = [
    "rand",
    "hashes",
    "global-context",
    "serde",
] }
rand = { version = "0.8.5", features = ["getrandom"] }
pretty_env_logger = "0.5.0"
byteorder = "1.5.0"
blake3 = { version = "1.5.0", features = ["rayon"] }
aes = "0.7.5"
block-modes = "0.8.1"
merkle = "1.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.1"
hex = "0.4.3"
ahash = "0.8.11"
num-derive = "0.4.2"
num-traits = "0.2.19"
rayon = "1.10.0"
async-trait = "0.1.80"
primitive-types = "0.12.2"
futures = { version = "0.3.29" }
log = "0.4.20"
bs58 = "0.5.0"
chrono = "0.4.35"

[dev-dependencies]
serial_test = "3.0.0"
tokio = { version = "1.37.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["default", "html_reports"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mockall = "0.13.1"
lazy_static = "1.4.0"

[features]
default = []
with-rayon = []

[[bench]]
name = "benches"
harness = false

[profile.release]
debug = true
lto = true
