[package]
name = "saito-rust"
version = "0.2.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saito-core = { path = "../saito-core" }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
#tungstenite = { version = "0.21.0" }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
pretty_env_logger = "0.5.0"
async-trait = "0.1.80"
lazy_static = "1.4.0"
figment = { version = "0.10.12", features = ["json"] }
futures = { version = "0.3.29", default-features = false }
rand = "0.8.5"
rayon = "1.10.0"
ahash = "0.8.11"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hex = "0.4.3"
warp = "0.3.6"
reqwest = "0.11.22"
base64 = "0.21.5"
ctrlc = { version = "3.4.4", features = ["termination"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
log = "0.4.20"
bs58 = "0.5.0"
clap = { version = "3.2.25", features = ["cargo"] }
console-subscriber = "0.2.0"



[dev-dependencies]
serial_test = "3.0.0"
ctor = "0.2.5"
criterion = "0.5.1"

[profile.dev]
panic = "unwind"

[features]
default = ["saito-core/with-rayon"]

[profile.release]
debug = true
lto = true

