[package]
name = "saito-wasm"
version = "0.2.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
saito-core = { path = "../saito-core" }
wasm-bindgen = { version = "0.2.92" }
wasm-bindgen-futures = "0.4.42"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
web-sys = "0.3.69"
async-trait = "0.1.80"
hex = "0.4.3"
tokio = "1.36.0"
js-sys = { version = "0.3.69" }
lazy_static = "1.4.0"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.21"
getrandom = { version = "0.2.15", features = ["js", "std"] }
rand = { version = "0.8.5", features = ["getrandom"] }
secp256k1 = { version = "0.30.0", features = ["hashes", "global-context", "serde"] }
bs58 = "0.5.0"
figment = { version = "0.10.12", features = ["json"] }
serde_json = { version = "1.0.117" }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.19" }
console_error_panic_hook = "0.1.7"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[profile.release]
lto = true

[features]
default = []
